--- a/frontend/src/pages/Main.css
+++ b/frontend/src/pages/Main.css
@@ -77,7 +77,7 @@
   border-radius: 5px;
   border: 0;
   background: #da552f;
-  color: #FFF;
+  color: #fff;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
@@ -94,20 +94,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, 0.8)
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .match-container .avatar {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  border: 5px solid #FFF;
+  border: 5px solid #fff;
   margin: 30px 0;
 }
- 
+
 .match-container strong {
   font-size: 32px;
-  color: #FFF;
+  color: #fff;
 }
 .match-container p {
   margin-top: 10px;
